--- a/static/index.html
+++ b/static/index.html
@@ -1,94 +1,307 @@
 <!doctype html>
-<html lang="id">
+<html lang="id" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SKUY - Nonton Anime</title>
+    <title>Korteks Wibu Stream Bau Bawang - Platform Anime Terbaik</title>
+    <meta
+      name="description"
+      content="Nonton anime subtitle Indonesia terbaru dan terlengkap di Korteks Wibu Stream. Streaming anime berkualitas HD dengan update episode terbaru setiap hari."
+    />
+    <meta
+      name="keywords"
+      content="anime, streaming, subtitle indonesia, nonton anime, anime terbaru, anime sub indo"
+    />
+
+    <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+
+    <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
+
+    <!-- Swiper CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="/static/style.css" />
+
+    <!-- Meta tags for social sharing -->
+    <meta
+      property="og:title"
+      content="SKUY - Platform Streaming Anime Terbaik"
+    />
+    <meta
+      property="og:description"
+      content="Nonton anime subtitle Indonesia terbaru dan terlengkap di SKUY"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="SKUY Anime" />
+
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎌</text></svg>"
+    />
   </head>
   <body>
+    <!-- Main Site Container -->
     <div class="site-container">
-      <aside class="sidebar">
-        <a href="#home" class="logo-link">
-          <h1 class="logo">SKUY</h1>
-        </a>
-        <nav class="sidebar-nav">
-          <a href="#home" class="nav-link active" data-nav="home">
-            <i class="fa-solid fa-house fa-fw"></i>
-            <span>Home</span>
+      <!-- Sidebar Navigation -->
+      <aside class="sidebar" role="navigation" aria-label="Main navigation">
+        <header class="sidebar-header">
+          <a href="#home" class="logo-link" aria-label="Korteks Wibu Home">
+            <div class="logo-icon">🎌</div>
+            <h1 class="logo">KWS</h1>
+            <p class="logo-subtitle">Korteks Wibu Stream</p>
           </a>
-          <a href="#jadwal" class="nav-link" data-nav="jadwal">
-            <i class="fa-solid fa-calendar-days fa-fw"></i>
+        </header>
+
+        <nav class="sidebar-nav">
+          <a
+            href="#home"
+            class="nav-link active"
+            data-nav="home"
+            aria-label="Beranda"
+          >
+            <i class="fa-solid fa-house fa-fw" aria-hidden="true"></i>
+            <span>Beranda</span>
+          </a>
+          <a
+            href="#jadwal"
+            class="nav-link"
+            data-nav="jadwal"
+            aria-label="Jadwal Rilis"
+          >
+            <i class="fa-solid fa-calendar-days fa-fw" aria-hidden="true"></i>
             <span>Jadwal Rilis</span>
           </a>
-          <a href="#anime-terbaru" class="nav-link" data-nav="anime-terbaru">
-            <i class="fa-solid fa-wand-magic-sparkles fa-fw"></i>
+          <a
+            href="#anime-terbaru"
+            class="nav-link"
+            data-nav="anime-terbaru"
+            aria-label="Anime Terbaru"
+          >
+            <i
+              class="fa-solid fa-wand-magic-sparkles fa-fw"
+              aria-hidden="true"
+            ></i>
             <span>Anime Terbaru</span>
           </a>
-          <a href="#movie" class="nav-link" data-nav="movie">
-            <i class="fa-solid fa-film fa-fw"></i>
-            <span>Daftar Movie</span>
+          <a
+            href="#movie"
+            class="nav-link"
+            data-nav="movie"
+            aria-label="Daftar Movie"
+          >
+            <i class="fa-solid fa-film fa-fw" aria-hidden="true"></i>
+            <span>Movie Anime</span>
+          </a>
+          <a
+            href="#trending"
+            class="nav-link"
+            data-nav="trending"
+            aria-label="Trending"
+          >
+            <i class="fa-solid fa-fire fa-fw" aria-hidden="true"></i>
+            <span>Trending</span>
+          </a>
+          <a
+            href="#favorites"
+            class="nav-link"
+            data-nav="favorites"
+            aria-label="Favorit"
+          >
+            <i class="fa-solid fa-heart fa-fw" aria-hidden="true"></i>
+            <span>Favorit</span>
           </a>
         </nav>
-        <div class="sidebar-footer">
-          <a href="#" class="nav-link">
-            <i class="fa-solid fa-gear fa-fw"></i>
-            <span>Settings</span>
-          </a>
-        </div>
       </aside>
 
+      <!-- Main Content Wrapper -->
       <div class="main-wrapper">
-        <header class="main-header">
+        <!-- Header -->
+        <header class="main-header" role="banner">
           <div class="header-left">
-            <button id="menu-toggle" class="icon-btn">
-              <i class="fa-solid fa-bars"></i>
+            <button
+              id="menu-toggle"
+              class="icon-btn"
+              aria-label="Toggle navigation menu"
+            >
+              <i class="fa-solid fa-bars" aria-hidden="true"></i>
             </button>
-            <div class="search-bar">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <input type="text" placeholder="Search shows..." />
+            <div class="search-bar" role="search">
+              <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
+              <input
+                type="text"
+                placeholder="Cari anime, genre, atau karakter..."
+                aria-label="Search anime"
+                autocomplete="off"
+              />
             </div>
           </div>
           <div class="header-right">
-            <button id="theme-toggle" class="icon-btn">
-              <i class="fa-solid fa-sun"></i>
-              <i class="fa-solid fa-moon"></i>
+            <button
+              id="notifications-btn"
+              class="icon-btn"
+              aria-label="Notifications"
+            >
+              <i class="fa-solid fa-bell" aria-hidden="true"></i>
+              <span class="notification-badge">3</span>
             </button>
-            <div class="profile-icon">
-              <img src="https://i.pravatar.cc/40?img=1" alt="Profile" />
+            <button
+              id="theme-toggle"
+              class="icon-btn"
+              aria-label="Toggle theme"
+            >
+              <i class="fa-solid fa-sun" aria-hidden="true"></i>
+              <i class="fa-solid fa-moon" aria-hidden="true"></i>
+            </button>
+            <div class="profile-dropdown">
+              <button class="profile-icon" aria-label="User profile menu">
+                <img
+                  src="https://i.pravatar.cc/80?img=1"
+                  alt="Profile Avatar"
+                />
+              </button>
+              <div class="profile-menu">
+                <a href="#profile" class="profile-menu-item">
+                  <i class="fa-solid fa-user"></i>
+                  Profil Saya
+                </a>
+                <a href="#watchlist" class="profile-menu-item">
+                  <i class="fa-solid fa-bookmark"></i>
+                  Watchlist
+                </a>
+                <a href="#history" class="profile-menu-item">
+                  <i class="fa-solid fa-clock-rotate-left"></i>
+                  Riwayat
+                </a>
+                <hr class="profile-menu-divider" />
+                <a href="#logout" class="profile-menu-item">
+                  <i class="fa-solid fa-sign-out-alt"></i>
+                  Keluar
+                </a>
+              </div>
             </div>
           </div>
         </header>
 
-        <main id="app-container"></main>
+        <!-- Main Content Area -->
+        <main id="app-container" role="main">
+          <!-- Content will be dynamically loaded here -->
+        </main>
 
-        <footer>
-          <p>
-            Dibuat dengan FastAPI & <i class="fa-solid fa-heart"></i> oleh
-            Gemini
-          </p>
+        <!-- Footer -->
+        <footer role="contentinfo">
+          <div class="footer-content">
+            <div class="footer-brand">
+              <h3>Korteks Wibu Stream</h3>
+              <p>
+                Platform streaming anime terbaik dengan koleksi lengkap dan
+                subtitle Indonesia berkualitas.
+              </p>
+            </div>
+            <div class="footer-links">
+              <div class="footer-column">
+                <h4>Konten</h4>
+                <ul>
+                  <li><a href="#anime-terbaru">Anime Terbaru</a></li>
+                  <li><a href="#movie">Movie Anime</a></li>
+                  <li><a href="#trending">Trending</a></li>
+                  <li><a href="#jadwal">Jadwal Rilis</a></li>
+                </ul>
+              </div>
+              <div class="footer-column">
+                <h4>Bantuan</h4>
+                <ul>
+                  <li><a href="#faq">FAQ</a></li>
+                  <li><a href="#contact">Kontak</a></li>
+                  <li><a href="#report">Laporkan Masalah</a></li>
+                  <li><a href="#request">Request Anime</a></li>
+                </ul>
+              </div>
+              <div class="footer-column">
+                <h4>Legal</h4>
+                <ul>
+                  <li><a href="#privacy">Kebijakan Privasi</a></li>
+                  <li><a href="#terms">Syarat & Ketentuan</a></li>
+                  <li><a href="#disclaimer">Disclaimer</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer-social">
+              <h4>Ikuti Kami</h4>
+              <div class="social-links">
+                <a href="#" aria-label="Follow us on Twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="#" aria-label="Follow us on Instagram">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" aria-label="Join our Discord">
+                  <i class="fa-brands fa-discord"></i>
+                </a>
+                <a href="#" aria-label="Subscribe to our YouTube">
+                  <i class="fa-brands fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="footer-bottom">
+            <p>
+              &copy; 2024 Korteks Wibu Stream Bau Bawang. Dibuat dengan
+              <i class="fa-solid fa-heart" aria-hidden="true"></i>
+              untuk para penggemar anime Indonesia.
+            </p>
+            <p class="footer-disclaimer">
+              Website ini tidak menyimpan file video apapun. Semua konten
+              berasal dari sumber eksternal.
+            </p>
+          </div>
         </footer>
       </div>
     </div>
 
-    <div id="loader" class="loader-container" style="display: none">
-      <div class="loader"></div>
+    <!-- Overlay for mobile menu -->
+    <div class="mobile-overlay" id="mobile-overlay"></div>
+
+    <!-- Loading Indicator -->
+    <div
+      id="loader"
+      class="loader-container"
+      style="display: none"
+      role="status"
+      aria-live="polite"
+    >
+      <div class="loader-content">
+        <div class="loader-spinner"></div>
+        <p class="loader-text">Memuat konten anime...</p>
+      </div>
     </div>
 
+    <!-- Notification Toast -->
+    <div id="toast-container" class="toast-container"></div>
+
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="/static/script.js"></script>
   </body>
