--- a/static/index.html
+++ b/static/index.html
@@ -148,15 +148,16 @@
             >
               <i class="fa-solid fa-bars" aria-hidden="true"></i>
             </button>
-            <div class="search-bar" role="search">
+            <form id="search-form" class="search-bar" role="search">
               <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
               <input
                 type="text"
+                id="search-input"
                 placeholder="Cari anime, genre, atau karakter..."
                 aria-label="Search anime"
                 autocomplete="off"
               />
-            </div>
+            </form>
           </div>
           <div class="header-right">
             <button
